experiment/power_ptbunif_k1000/result/power_ptbunif_k1000_priv1_genrrchi.out
  File "/mnt/nas/users/user213/LDPUts/experiment/power_ptbunif_k1000/power_ptbunif_k1000.py", line 4
    device_num = 
                ^
SyntaxError: invalid syntax
